Use "node_modules/.tmp/build.typescript as outDir

--- a/examples/example-lib2/tsconfig.json
+++ b/examples/example-lib2/tsconfig.json
@@ -3,7 +3,7 @@
   "include": ["src"],
   "compilerOptions": {
     "noUnusedLocals": false,
-    "outDir": "dist",
+    "outDir": "./node_modules/.tmp/build.typescript",
     "rootDir": "src",
     "module": "esnext"
   }
