--- a/examples/example-babylon1/tsconfig.json
+++ b/examples/example-babylon1/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "outDir": "node_modules/.tmp/build.typescript",
+    "outDir": "./node_modules/.tmp/build.typescript",
     "rootDir": "./",
     "baseUrl": "./"
   }
