--- a/examples/example-lib1/tsconfig.json
+++ b/examples/example-lib1/tsconfig.json
@@ -3,7 +3,7 @@
   "include": ["./**/*.ts"],
   "compilerOptions": {
     "noUnusedLocals": false,
-    "outDir": "node_modules/.tmp/dist",
+    "outDir": "./node_modules/.tmp/build.typescript",
     "module": "esnext"
   }
 }
