--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,7 +45,7 @@
     "lib": ["es2015", "es2016", "es2017", "dom"], // 🔅 Specify library files to be included in the compilation.
     "module": "commonjs",                         // 🔅 Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'.
     "noEmit": true,                               // 🔅 Do not emit outputs.
-    "outDir": "dist",                             // 🔅 Redirect output structure to the directory.
+    "outDir": "./node_modules/.tmp/build.typescript", // 🔅 Redirect output structure to the directory.
     "rootDir": ".",                               // 🔅 Specify the root directory of input files. Use to control the output directory structure with --outDir.
     "sourceMap": true,                            // 🔅 Allow javascript files to be compiled.
     "target": "esnext",                           // 🔅 Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'.
