--- a/package.json
+++ b/package.json
@@ -30,18 +30,23 @@
     "build": "lerna run build --parallel --stream",
     "ci": "./bin/ci",
     "clean": "git clean -dxf -e node_modules",
-    "compile": "yarn compile:root && lerna run compile",
     "compile:root": "tsc --build tsconfig.root.json",
+    "compile": "yarn compile:root && lerna run compile",
     "fix": "yarn prettier && yarn lint",
-    "lint": "tslint -c tslint.json --project tsconfig.root.json --fix && lerna run lint --parallel",
+    "lint": "run-p lint:js lint:ts",
+    "lint:js": "eslint --ignore-path=.gitignore --fix \"**/*.js\"",
+    "lint:ts": "run-p lint:ts:root lint:ts:packages",
+    "lint:ts:root": "tslint -c tslint.json --project tsconfig.json --fix -t codeFrame --project tsconfig.root.json",
+    "lint:ts:packages": "tslint -c tslint.json --project tsconfig.json --fix -t codeFrame --project tsconfig.json",
+    "lint:ts:packages:parallell": "lerna run lint --parallel",
     "postinstall": "ts-node -T bin/post-install.ts",
     "preinstall": "rm -f .git/hooks/pre-commit || true",
     "prettier": "prettier -c --write \"**/*.{ts,js,tsx,jsx,json,md,html,css}\"",
     "test": "run-p -l test:unit test:e2e",
     "test:unit": "jest -w 2 -c config/jest/jest.config.js",
     "test:e2e": "lerna run test:e2e",
-    "test:watch": "yarn test -- --watch --notify",
-    "test:serial": "lerna exec -- yarn test"
+    "test:serial": "lerna exec -- yarn test",
+    "test:watch": "yarn test -- --watch --notify"
   },
   "prettier": {
     "bracketSpacing": true,
@@ -66,8 +71,10 @@
     "@types/fs-extra": "5.0.5",
     "@types/jest": "24.0.11",
     "babel-plugin-loop-optimizer": "1.4.1",
+    "chalk": "2.4.2",
     "del-cli": "1.1.0",
     "eslint": "5.16.0",
+    "eslint-config-prettier": "4.1.0",
     "eslint-config-standard": "12.0.0",
     "eslint-plugin-import": "2.17.2",
     "eslint-plugin-node": "8.0.1",
