--- a/tsconfig.json
+++ b/tsconfig.json
@@ -84,7 +84,8 @@
     // ========================================================================s
     // 💥 Module Resolution Options
     // ========================================================================s
-    "allowSyntheticDefaultImports": true,     // Allow default imports from modules with no default export. This does not affect code emit, just typechecking.
+    // Warning: allowSyntheticDefaultImports MAY trigger undesired behavior: https://github.com/Microsoft/vscode/issues/63013
+    "allowSyntheticDefaultImports": false,    // Allow default imports from modules with no default export. This does not affect code emit, just typechecking.
     "baseUrl": ".",                           // Base directory to resolve non-absolute module names.
     "esModuleInterop": true,                  // Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'.
     "moduleResolution": "node",               // Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6).
