--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "compile": "yarn compile:root && lerna run compile",
     "fix": "yarn prettier && yarn lint",
     "lint": "run-p lint:js lint:ts",
-    "lint:js": "eslint --ignore-path=.gitignore --fix \"**/*.js\"",
+    "lint:js": "eslint --ignore-path=.gitignore --fix  .",
     "lint:ts": "run-p lint:ts:root lint:ts:packages",
     "lint:ts:root": "tslint -c tslint.json --project tsconfig.json --fix -t codeFrame --project tsconfig.root.json",
     "lint:ts:packages": "tslint -c tslint.json --project tsconfig.json --fix -t codeFrame --project tsconfig.json",
