--- a/tsconfig.root.json
+++ b/tsconfig.root.json
@@ -10,7 +10,7 @@
     "moduleResolution": "node",
     "noEmit": true,
     "noLib": false,
-    "noUnusedLocals": false,
+    "noUnusedLocals": true,
     "sourceMap": false,
     "target": "es6"
   }
