--- a/examples/example-nightwatch1/package.json
+++ b/examples/example-nightwatch1/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "clean": "git clean -dxf -e node_modules -e \"*cache*\"",
-    "build": "tsc -b tsconfig.json",
-    "test": "run-p -l test:*",
+    "build": "tsc -b tsconfig.json --pretty",
+    "test": "run-p test:*",
     "test:e2e": "yarn clean && yarn build && nightwatch",
     "lint": "tslint -c ../../tslint.json --project tsconfig.json -t codeFrame"
   },
