--- a/package.json
+++ b/package.json
@@ -34,12 +34,11 @@
     "compile:root": "tsc --build tsconfig.root.json --pretty",
     "compile:packages": "lerna run compile --parallel --stream",
     "fix": "yarn prettier && yarn lint",
-    "lint": "run-p lint:js lint:ts",
-    "lint:js": "eslint --ignore-path=.gitignore --fix  .",
+    "lint": "run-p lint:ts lint:js",
+    "lint:js": "eslint --ignore-path=.gitignore --fix  \"**/*.js\"",
     "lint:ts": "run-p lint:ts:root lint:ts:packages",
     "lint:ts:root": "tslint -c tslint.json --project tsconfig.json --fix -t codeFrame --project tsconfig.root.json",
-    "lint:ts:packages": "tslint -c tslint.json --project tsconfig.json --fix -t codeFrame --project tsconfig.json",
-    "lint:ts:packages:parallell": "lerna run lint --parallel",
+    "lint:ts:packages": "tslint -c tslint.json --project tsconfig.packages.json --fix -t codeFrame --project tsconfig.json",
     "postinstall": "ts-node -T bin/post-install.ts",
     "preinstall": "rm -f .git/hooks/pre-commit || true",
     "prettier": "prettier -c --write \"**/*.{ts,js,tsx,jsx,json,md,html,css}\"",
