--- a/package.json
+++ b/package.json
@@ -86,7 +86,6 @@
     "jest": "24.7.1",
     "jest-cli": "24.7.1",
     "lerna": "^3.13.4",
-    "lint-staged": "8.1.5",
     "npm-run-all": "4.1.5",
     "prettier": "1.17.0",
     "ts-jest": "24.0.2",
@@ -101,6 +100,7 @@
   },
   "devDependencies": {
     "diff-so-fancy": "1.2.5",
-    "node-notifier": "5.4.0"
+    "node-notifier": "5.4.0",
+    "lint-staged": "8.1.5"
   }
 }
