--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
   },
   "devDependencies": {
     "diff-so-fancy": "1.2.5",
-    "node-notifier": "5.4.0",
-    "lint-staged": "8.1.5"
+    "lint-staged": "8.1.5",
+    "node-notifier": "5.4.0"
   }
 }
