Use same same name conventions for builds (babel/tsc)

--- a/examples/example-babylon1/tsconfig.json
+++ b/examples/example-babylon1/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "outDir": "./node_modules/.tmp/build.ts",
+    "outDir": "./node_modules/.tmp/build.tsc",
     "rootDir": "./",
     "baseUrl": "./"
   }
