--- a/examples/example-lib1/tsconfig.json
+++ b/examples/example-lib1/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "include": ["./**/*.ts"],
   "compilerOptions": {
-    "outDir": "./node_modules/.tmp/build.ts",
+    "outDir": "./node_modules/.tmp/build.tsc",
     "module": "esnext"
   }
 }
