--- a/examples/example-babylon1/package.json
+++ b/examples/example-babylon1/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "clean": "git clean -dxf -e node_modules -e \"*cache*\"",
+    "clean": "git clean -dXf -e node_modules -e \"*cache*\"",
     "build": "yarn clean && parcel build --no-minify --no-source-maps index.html",
     "compile": "run-p compile:*",
     "compile:js": "babel src --root-mode upward --verbose --out-dir node_modules/.tmp/build.babel --extensions \".ts,.tsx\" --source-maps true",
