--- a/examples/example-lib1/package.json
+++ b/examples/example-lib1/package.json
@@ -16,7 +16,7 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "del dist && microbundle build src/index.ts -o dist --target web -f umd",
-    "clean": "git clean -dxf -e node_modules -e \"*cache*\"",
+    "clean": "git clean -dXf -e node_modules -e \"*cache*\"",
     "compile": "del dist && tsc -b tsconfig.json --pretty",
     "lint": "tslint -c ../../tslint.json --project tsconfig.json -t codeFrame --fix",
     "test": "jest -w 2 --notify"
