--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,8 +60,7 @@
     "**/node_modules/**": true,
     "**/reports": true,
     "**/build": true,
-    "**/dist": true,
-    "examples/**/dist": true
+    "**/dist": true
   },
   "files.trimTrailingWhitespace": true,
   "files.useExperimentalFileWatcher": true,
