--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "jest": "24.7.1",
     "jest-cli": "24.7.1",
     "lerna": "^3.13.4",
+    "lodash": "4.17.11",
     "npm-run-all": "4.1.5",
     "prettier": "1.17.0",
     "ts-jest": "24.0.2",
