--- a/config/helpers-cli/package.json
+++ b/config/helpers-cli/package.json
@@ -16,6 +16,7 @@
     "@types/execa": "0.9.0",
     "@types/lodash": "4.14.123",
     "execa": "1.0.0",
-    "lodash": "4.17.11"
+    "lodash": "4.17.11",
+    "pkg-up": "3.1.0"
   }
 }
