--- a/examples/example-nightwatch1/package.json
+++ b/examples/example-nightwatch1/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "clean": "git clean -dXf -e node_modules -e \"*cache*\"",
+    "clean": "ts-node -T ../../bin/clean.ts",
     "build": "tsc -b tsconfig.json --pretty",
     "test": "run-p test:*",
     "test:e2e": "yarn clean && yarn build && nightwatch",
