--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "7.4.4",
     "@babel/runtime-corejs3": "7.4.4",
+    "@types/figures": "3.0.1",
     "@types/fs-extra": "5.0.5",
     "@types/jest": "24.0.12",
     "babel-plugin-loop-optimizer": "1.4.1",
@@ -82,6 +83,7 @@
     "eslint-plugin-promise": "4.1.1",
     "eslint-plugin-standard": "4.0.0",
     "esm": "3.2.22",
+    "figures": "3.0.0",
     "fs-extra": "7.0.1",
     "husky": "2.2.0",
     "jest": "24.7.1",
