--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "compile:root": "tsc --build tsconfig.root.json --pretty",
     "compile:packages": "lerna run compile --parallel --stream",
     "fix": "yarn prettier && yarn lint",
-    "lint": "run-p lint:ts lint:js",
+    "lint": "run-s lint:ts lint:js",
     "lint:js": "eslint --ignore-path=.gitignore --fix  \"**/*.js\"",
     "lint:ts": "run-p lint:ts:root lint:ts:packages",
     "lint:ts:root": "tslint -c tslint.json --fix -t codeFrame --project tsconfig.root.json",
@@ -78,6 +78,7 @@
     "eslint": "5.16.0",
     "eslint-config-prettier": "4.2.0",
     "eslint-config-standard": "12.0.0",
+    "eslint-plugin-cypress": "2.2.1",
     "eslint-plugin-import": "2.17.2",
     "eslint-plugin-node": "8.0.1",
     "eslint-plugin-promise": "4.1.1",
