Add post-checkout hook

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "lint:ts:root": "tslint -c tslint.json --fix -t codeFrame --project tsconfig.root.json",
     "lint:ts:packages": "tslint -c tslint.json --project tsconfig.packages.json --fix -t codeFrame --project tsconfig.json",
     "postinstall": "ts-node -T bin/post-install.ts",
-    "preinstall": "rm -f .git/hooks/pre-commit || true",
+    "preinstall": "rm -f .git/hooks/* || true",
     "prettier": "prettier -c --write \"**/*.{ts,js,tsx,jsx,json,md,html,css}\"",
     "test": "run-p -l test:unit test:e2e",
     "test:unit": "jest -w 2 -c config/jest/jest.config.js",
