Move most of starterkit files into /.starterkit Ensures upgrading & reusing node_modules becomes easier.

--- a/.starterkit/config/tsconfig.root.json
+++ b/.starterkit/config/tsconfig.root.json
@@ -1,6 +1,6 @@
 {
-  "extends": "./tsconfig.json",
-  "include": ["./config/**/*.ts", "./bin/**/*.ts"],
+  "extends": "../../tsconfig.json",
+  "include": ["../**/*.ts"],
   "compilerOptions": {
     "declaration": false,
     "declarationMap": false,
