--- a/.starterkit/config/package.json
+++ b/.starterkit/config/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@config/jest",
+  "name": "@starterkit/config",
   "version": "0.0.1",
   "description": "Jest Base configuration",
-  "main": "./jest.config.base.js",
+  "main": ".",
   "private": true,
   "scripts": {
     "test": "exit 0 || true"
