--- a/examples/example-cypress/package.json
+++ b/examples/example-cypress/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "clean": "ts-node -T ../../bin/clean.ts",
+    "clean": "sk-clean",
     "open": "cypress open",
     "build": "tsc -b tsconfig.json --pretty",
     "test": "yarn test:e2e",
