--- a/examples/example-lib1/package.json
+++ b/examples/example-lib1/package.json
@@ -16,10 +16,10 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "del dist && microbundle build src/index.ts -o dist --target web -f umd",
-    "clean": "ts-node -T ../../bin/clean.ts",
+    "clean": "sk-clean",
     "compile": "del dist && tsc -b tsconfig.json --pretty",
     "lint": "tslint -c ../../tslint.json --project tsconfig.json -t codeFrame --fix",
-    "test": "jest -w 2 --notify"
+    "test": "jest -w 3 --detectOpenHandles --notify"
   },
   "dependencies": {
     "microbundle": "0.11.0",
