--- a/examples/example-lib2/package.json
+++ b/examples/example-lib2/package.json
@@ -16,12 +16,12 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "del dist && microbundle build src/index.ts -o dist --target web -f umd",
-    "clean": "ts-node -T ../../bin/clean.ts",
+    "clean": "sk-clean",
     "compile": "run-p compile:*",
     "compile:js": "babel src --root-mode upward --verbose --out-dir node_modules/.tmp/build.babel --extensions \".ts,.tsx\" --source-maps inline",
     "compile:ts": "tsc -b tsconfig.json --pretty",
     "lint": "tslint -c ../../tslint.json --project tsconfig.json -t codeFrame --fix",
-    "test": "jest -w 2 --notify"
+    "test": "jest -w 3 --detectOpenHandles --notify"
   },
   "files": [
     "dist/*",
