--- a/package.json
+++ b/package.json
@@ -22,28 +22,28 @@
     "npm": ">= 999-this-repo-is-yarn-only:see-npmrc"
   },
   "workspaces": [
+    ".starterkit/*",
     "examples/*",
-    "config/*",
     "packages/*"
   ],
   "scripts": {
     "build": "lerna run build --parallel --stream",
-    "ci": "./bin/ci",
+    "ci": ".starterkit/bin/ci",
     "clean": "ts-node -T bin/clean.ts",
     "compile": "run-p compile:*",
-    "compile:root": "tsc --build tsconfig.root.json --pretty",
+    "compile:root": "tsc --build .starterkit/config/tsconfig.root.json --pretty",
     "compile:packages": "lerna run compile --parallel --stream",
     "fix": "yarn prettier && yarn lint",
     "lint": "run-s lint:ts lint:js",
     "lint:js": "eslint --ignore-path=.gitignore --fix  \"**/*.js\"",
     "lint:ts": "run-p lint:ts:root lint:ts:packages",
-    "lint:ts:root": "tslint -c tslint.json --fix -t codeFrame --project tsconfig.root.json",
-    "lint:ts:packages": "tslint -c tslint.json --project tsconfig.packages.json --fix -t codeFrame --project tsconfig.json",
-    "postinstall": "ts-node -T bin/post-install.ts",
+    "lint:ts:root": "tslint -c tslint.json --fix -t codeFrame --project .starterkit/config/tsconfig.root.json",
+    "lint:ts:packages": "tslint -c tslint.json  --fix -t codeFrame --project .starterkit/config/tsconfig.packages.json",
+    "postinstall": "ts-node -T .starterkit/bin/post-install.ts",
     "preinstall": "rm -f .git/hooks/* || true",
     "prettier": "prettier -c --write \"**/*.{ts,js,tsx,jsx,json,md,html,css}\"",
     "test": "run-p -l test:unit test:e2e",
-    "test:unit": "jest -w 2 -c config/jest/jest.config.js",
+    "test:unit": "jest -w 3 -c .starterkit/config/jest.config.js",
     "test:e2e": "lerna run test:e2e",
     "test:serial": "lerna exec -- yarn test",
     "test:watch": "yarn test -- --watch --notify"
