--- a/package.json
+++ b/package.json
@@ -22,31 +22,30 @@
     "npm": ">= 999-this-repo-is-yarn-only:see-npmrc"
   },
   "workspaces": [
-    ".starterkit/*",
+    "lib/*",
     "examples/*",
     "packages/*"
   ],
   "scripts": {
-    "build": "lerna run build --parallel --stream",
-    "ci": ".starterkit/bin/ci",
-    "clean": "ts-node -T bin/clean.ts",
+    "build": "npx lerna run build --parallel --stream",
+    "ci": "lib/bin/ci",
+    "clean": "npx ts-node -T bin/clean.ts",
     "compile": "run-p compile:*",
-    "compile:root": "tsc --build .starterkit/config/tsconfig.root.json --pretty",
-    "compile:packages": "lerna run compile --parallel --stream",
-    "fix": "yarn prettier && yarn lint",
-    "lint": "run-s lint:ts lint:js",
-    "lint:js": "eslint --ignore-path=.gitignore --fix  \"**/*.js\"",
-    "lint:ts": "run-p lint:ts:root lint:ts:packages",
-    "lint:ts:root": "tslint -c tslint.json --fix -t codeFrame --project .starterkit/config/tsconfig.root.json",
-    "lint:ts:packages": "tslint -c tslint.json  --fix -t codeFrame --project .starterkit/config/tsconfig.packages.json",
-    "postinstall": "ts-node -T .starterkit/bin/post-install.ts",
+    "compile:root": "npx tsc --build lib/config/tsconfig.root.json --pretty",
+    "compile:packages": "npx lerna run compile --parallel --stream",
+    "fix": "npx yarn prettier && yarn lint",
+    "lint": "npx run-s lint:*",
+    "lint:js": "npx eslint --ignore-path=.gitignore --fix . --ext js --ext ts",
+    "lint:ts:root": "npx tslint -c tslint.json --fix -t codeFrame --project lib/config/tsconfig.root.json",
+    "lint:ts:packages": "npx tslint -c tslint.json  --fix -t codeFrame --project lib/config/tsconfig.packages.json",
+    "postinstall": "npx ts-node -T lib/bin/post-install.ts",
     "preinstall": "rm -f .git/hooks/* || true",
-    "prettier": "prettier -c --write \"**/*.{ts,js,tsx,jsx,json,md,html,css}\"",
-    "test": "run-p -l test:unit test:e2e",
-    "test:unit": "jest -w 3 -c .starterkit/config/jest.config.js",
-    "test:e2e": "lerna run test:e2e",
-    "test:serial": "lerna exec -- yarn test",
-    "test:watch": "yarn test -- --watch --notify"
+    "prettier": "npx prettier -c --write \"**/*.{ts,js,tsx,jsx,json,md,html,css}\"",
+    "test": "npx run-p -l test:unit test:e2e",
+    "test:unit": "npx jest -w 3 -c lib/config/jest.config.js",
+    "test:e2e": "npx lerna run test:e2e --stream",
+    "test:serial": "npx lerna exec -- yarn test",
+    "test:watch": "npx yarn test -- --watch --notify"
   },
   "prettier": {
     "bracketSpacing": true,
@@ -71,16 +70,19 @@
     "@types/figures": "3.0.1",
     "@types/fs-extra": "5.1.0",
     "@types/jest": "24.0.12",
+    "@typescript-eslint/eslint-plugin": "1.7.0",
+    "@typescript-eslint/parser": "1.7.0",
     "babel-plugin-loop-optimizer": "1.4.1",
     "blend-promise-utils": "1.22.0",
     "chalk": "2.4.2",
     "del-cli": "1.1.0",
-    "eslint": "5.16.0",
+    "eslint": "6.0.0-alpha.0",
     "eslint-config-prettier": "4.2.0",
     "eslint-config-standard": "12.0.0",
     "eslint-plugin-cypress": "2.2.1",
     "eslint-plugin-import": "2.17.2",
     "eslint-plugin-node": "9.0.1",
+    "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-promise": "4.1.1",
     "eslint-plugin-standard": "4.0.0",
     "esm": "3.2.22",
@@ -95,12 +97,7 @@
     "prettier": "1.17.0",
     "ts-jest": "24.0.2",
     "ts-node": "8.1.0",
-    "tslint": "5.16.0",
-    "tslint-config-prettier": "1.18.0",
-    "tslint-config-standard": "8.0.1",
-    "tslint-eslint-rules": "5.4.0",
     "typescript": "^3.4.5",
-    "typescript-tslint-plugin": "0.3.1",
     "yarn": "1.15.2"
   },
   "devDependencies": {
