--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ build/Release
 
 # Dependency directories
 node_modules/
+node_modules
 jspm_packages/
 
 # Typescript v1 declaration files
@@ -61,7 +62,6 @@ typings/
 # dotenv environment variables file
 #.env
 
-
 ### OSX ###
 *.DS_Store
 .AppleDouble
@@ -69,7 +69,6 @@ typings/
 
 # Icon must end with two \r
 Icon
-
 
 # Thumbnails
 ._*
@@ -142,7 +141,6 @@ dist
 **/package-lock.json
 **/yarn.lock
 !/yarn.lock
-
 
 # Don't allow a mix of ts and js files in this repository...
 examples/*.js
@@ -232,7 +230,6 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
-
 
 # Avoid Jenkins error "Working tree has uncommitted changes"
 git-vars
