--- a/examples/example-cypress/tsconfig.json
+++ b/examples/example-cypress/tsconfig.json
@@ -2,10 +2,11 @@
   "extends": "../../tsconfig.json",
   "include": [
     "./**/*.d.ts",
-    "./**/*.ts"
+    "./**/*"
   ],
   "compilerOptions": {
     "rootDir": ".",
+    "allowJs": true,
 
     // Create *.js files (disabled by default)
     "noEmit": false,
