--- a/lib/bin/tsconfig.json
+++ b/lib/bin/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["./**/*.ts"],
+  "include": ["./**/*"],
   "compilerOptions": {
     "outDir": "./node_modules/.tmp/build.tsc",
     "module": "esnext",
-    "types": ["node"]
+    "allowJs": true,
+    "checkJs": true
   }
 }
